Silly fix to unbreak the table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.container { width: 1200px; }
+.container { width: 1250px; }
 
 /* the table-collapse stuff was taken from http://codepen.io/miloslovesky/pen/AawcB and is licensed under MIT */
 .table-collapse > tbody > tr {
